--- a/kislevsmart/static/css/notificaciones.css
+++ b/kislevsmart/static/css/notificaciones.css
@@ -279,7 +279,7 @@ h1 {
 }
 
 .card-content {
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(255, 255, 255, 0.9);
     line-height: 1.6;
     flex: 1;
 }
